# Shui

./: .gitignore  Cargo.toml  next.config.ts  package.json
shui-mini/: Cargo.toml  README.md
shui-mini/ci/: build-shui-mini.yaml
shui-mini/src/: config.rs  lock.rs  main.rs  stats.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: timer.rs
src-tauri/src/core/setup/: mod.rs
src/app/reminder/: page.tsx
