[package]
name = "shui-mini"
version = "0.1.0"
edition = "2021"
description = "极简喝水提醒：纯托盘 + 系统通知，无 WebView"

[[bin]]
name = "shui-mini"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
tao = "0.30"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
auto-launch = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
] }

# release profile 在 workspace 根 Cargo.toml
